# c-mpscfifo

./: .gitignore  Doxyfile  LICENSE  README.md  build.ninja  meson.build  meson_options.txt
include/: meson.build  mpscfifo.h  mpscfifo_dbg.h  mpscfifo_misc.h  msg.h
src/: hello.c  meson.build  mpscfifo.c  mpscfifo_dbg.c
test/: meson.build  multi_thread.c  multi_thread_msg.c  test.c
